End of course :#
Except the final capstone project...

--- a/02-Python Statements/09-Guessing Game Challenge.ipynb
+++ b/02-Python Statements/09-Guessing Game Challenge.ipynb
@@ -35,10 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from random import randint\n",
+    "ans = randint(1,100)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,10 +52,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the guessing game!\n",
+      "Rules: Your goal is to guess the correct number. For the first time you guess, if your guess is within 10 of the correct number, the program will return 'Warm', else it will return 'Cold'. For every subsequent guess, you will get 'Warmer' if your guess is closer to the correct number, otherwise you will get 'Colder'.\n",
+      "Have fun!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Welcome to the guessing game!\\nRules: Your goal is to guess the correct number. For the first time you guess, if your guess is within 10 of the correct number, the program will return 'Warm', else it will return 'Cold'. For every subsequent guess, you will get 'Warmer' if your guess is closer to the correct number, otherwise you will get 'Colder'.\\nHave fun!\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,22 +117,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the guessing game!\n",
+      "Rules: Your goal is to guess the correct number within 1 and 100. For the first time you guess, if your guess is within 10 of the correct number, the program will return 'Warm', else it will return 'Cold'. For every subsequent guess, you will get 'Warmer' if your guess is closer to the correct number, otherwise you will get 'Colder'.\n",
+      "Have fun!\n",
+      "Enter your guess: 999\n",
+      "Out of bound!\n",
+      "Enter your guess: 90\n",
+      "Cold\n",
+      "Enter your guess: 90\n",
+      "Your guess is the same as before! Guess another number.\n",
+      "Enter your guess: 90\n",
+      "Your guess is the same as before! Guess another number.\n",
+      "Enter your guess: 40\n",
+      "Warmer\n",
+      "Enter your guess: 30\n",
+      "Colder\n",
+      "Enter your guess: 50\n",
+      "Warmer\n",
+      "Enter your guess: 60\n",
+      "Colder\n",
+      "Enter your guess: 45\n",
+      "Warmer\n",
+      "Enter your guess: 46\n",
+      "Warmer\n",
+      "Enter your guess: 49\n",
+      "Warmer\n",
+      "Enter your guess: 56\n",
+      "Colder\n",
+      "Enter your guess: 53\n",
+      "Warmer\n",
+      "Enter your guess: 54\n",
+      "Colder\n",
+      "Enter your guess: 51\n",
+      "Warmer\n",
+      "Enter your guess: 52\n",
+      "Colder\n",
+      "Enter your guess: 47\n",
+      "Warmer\n",
+      "Enter your guess: 43\n",
+      "Colder\n",
+      "Enter your guess: 44\n",
+      "Warmer\n",
+      "Enter your guess: 45\n",
+      "Warmer\n",
+      "Enter your guess: 46\n",
+      "Warmer\n",
+      "Enter your guess: 48\n",
+      "Warmer\n",
+      "You got it right! The number is: 48\n",
+      "You guessed 21 times.\n"
+     ]
+    }
+   ],
    "source": [
-    "while True:\n",
-    "\n",
-    "    # we can copy the code from above to take an input\n",
-    "\n",
-    "    pass"
+    "from random import randint\n",
+    "ans = randint(1,100)\n",
+    "print(\"Welcome to the guessing game!\\n\"\n",
+    "      \"Rules: Your goal is to guess the correct number within 1 and 100. For the first time you guess, if your guess is within 10 of the correct number, the program will return 'Warm', else it will return 'Cold'. For every subsequent guess, you will get 'Warmer' if your guess is closer to the correct number, otherwise you will get 'Colder'.\\n\"\n",
+    "      \"Have fun!\")\n",
+    "guess = [-1]\n",
+    "guess_count = 0\n",
+    "while guess[-1] != ans:\n",
+    "      guess.append(int(input(\"Enter your guess: \")))\n",
+    "      if guess[-1] < 0 or guess[-1] > 100:\n",
+    "            print('Out of bound!')\n",
+    "            continue\n",
+    "      guess_count += 1\n",
+    "      if guess_count == 1:\n",
+    "            if abs(guess[-1] - ans) <= 10:\n",
+    "                  print('Warm')\n",
+    "            else:\n",
+    "                  print('Cold')\n",
+    "      else:\n",
+    "            if guess[-1] == guess[-2]:\n",
+    "                  print('Your guess is the same as before! Guess another number.')\n",
+    "            elif abs(guess[-1] - ans) <= abs(guess[-2] - ans):\n",
+    "                  print('Warmer')\n",
+    "            else:\n",
+    "                  print('Colder')\n",
+    "print(f'You got it right! The number is: {ans}\\nYou guessed {guess_count} times.')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "That's it! You've just programmed your first game!\n",
+    "#### That's it! You've just programmed your first game!\n",
     "\n",
     "In the next section we'll learn how to turn some of these repetitive actions into *functions* that can be called whenever we need them."
    ]
@@ -146,7 +238,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
