--- a/08-Milestone Project - 2/03-Milestone Project 2 - Complete Walkthrough Solution.ipynb
+++ b/08-Milestone Project - 2/03-Milestone Project 2 - Complete Walkthrough Solution.ipynb
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +341,8 @@
     "    def adjust_for_ace(self):\n",
     "        while self.value > 21 and self.aces:\n",
     "            self.value -= 10\n",
-    "            self.aces -= 1 "
+    "            self.aces -= 1 \n",
+    "            "
    ]
   },
   {
@@ -799,7 +800,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
