--- a/09-Built-in Functions/03-Filter.ipynb
+++ b/09-Built-in Functions/03-Filter.ipynb
@@ -17,14 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "#First let's make a function\n",
     "def even_check(num):\n",
     "    if num%2 ==0:\n",
-    "        return True"
+    "        return True\n",
+    "    "
    ]
   },
   {
@@ -107,7 +108,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
