--- a/09-Built-in Functions/05-Enumerate.ipynb
+++ b/09-Built-in Functions/05-Enumerate.ipynb
@@ -33,6 +33,16 @@
       "2\n",
       "c\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 'a'), (1, 'b'), (2, 'c')]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -40,7 +50,8 @@
     "\n",
     "for number,item in enumerate(lst):\n",
     "    print(number)\n",
-    "    print(item)"
+    "    print(item)\n",
+    "list(enumerate(lst))"
    ]
   },
   {
@@ -125,7 +136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
