--- a/03-Methods and Functions/02-Functions.ipynb
+++ b/03-Methods and Functions/02-Functions.ipynb
@@ -110,24 +110,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def greeting(name):\n",
-    "    print('Hello %s' %(name))"
+    "    print('Hello %s, %s' %(name, 'how are you?'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello Jose\n"
+      "Hello Jose, how are you?\n"
      ]
     }
    ],
@@ -349,7 +349,7 @@
     }
    ],
    "source": [
-    "is_prime2(18)"
+    "is_prime2()"
    ]
   },
   {
@@ -364,6 +364,45 @@
    "metadata": {},
    "source": [
     "Great! You should now have a basic understanding of creating your own functions to save yourself from repeatedly writing code!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def is_prime3(num):\n",
+    "    '''\n",
+    "    Check if a number is prime.\n",
+    "    '''\n",
+    "    if num % 2 == 0 and num > 2:\n",
+    "        return False\n",
+    "    for n in range(3, int(math.sqrt(num)) + 1, 2):\n",
+    "        if num % n == 0:\n",
+    "            return False\n",
+    "    return True\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_prime3(43)"
    ]
   }
  ],
@@ -383,7 +422,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
