--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -14,26 +14,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    return 4/3 * 3.1415 * (rad ** 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "33.49333333333333"
+       "33.50933333333333"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,17 +53,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "    if low <= num <= high:\n",
+    "        print(f'{num} is in the range between {low} and {high}')\n",
+    "    else:\n",
+    "        print(f'{num} is not in the range between {low} and {high}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -88,17 +91,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    return low <= num <= high"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +110,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,26 +138,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    up = 0\n",
+    "    low = 0\n",
+    "    for i in s:\n",
+    "        if i.islower():\n",
+    "            low += 1\n",
+    "        elif i.isupper():\n",
+    "            up += 1\n",
+    "    print('Original string: ' + s)\n",
+    "    print('No. of Upper case characters:', up)\n",
+    "    print('No. of Lower case characters:', low)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "Original string: Hello Mr. Rogers, how are you this fine Tuesday?\n",
+      "No. of Upper case characters: 4\n",
+      "No. of Lower case characters: 33\n"
      ]
     }
    ],
@@ -176,17 +188,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    # return list(set(lst))\n",
+    "    new =[]\n",
+    "    for i in lst:\n",
+    "        if not i in new:\n",
+    "            new.append(i)\n",
+    "    return new"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +212,7 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,17 +234,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def multiply(numbers):  \n",
-    "    pass"
+    "def multiply(numbers):\n",
+    "    r = 1\n",
+    "    for n in numbers:\n",
+    "        r *= n\n",
+    "    return r"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +256,7 @@
        "-24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,26 +277,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    ns = s.replace(' ','')\n",
+    "    return ns[::-1] == ns\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,19 +324,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "\n",
     "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "    letters = list(alphabet)\n",
+    "    for i in str1:\n",
+    "        if i.lower() in letters:\n",
+    "            letters.pop(letters.index(i.lower()))\n",
+    "    return len(letters) == 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import string\n",
+    "# using set()\n",
+    "def ispangram2(str2, alphab=string.ascii_uppercase):\n",
+    "    alset = set(alphab)\n",
+    "    strset = set(str2.upper())\n",
+    "    # lets = set(alphab)\n",
+    "    # for i in set(str2):\n",
+    "    #    if i.upper() in lets:\n",
+    "    #        lets.pop(lets.index(i.upper()))\n",
+    "    return alset <= strset # set1 < set2 means set1 is a subset of set2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -323,33 +367,53 @@
        "True"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ispangram(\"The quick brown fox jumps over the lazy dog\")"
+    "ispangram2(\"The quick brown fox jumps over the lazy dog\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'abcdefghijklmnopqrstuvwxyz'"
+       "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "string.ascii_lowercase"
+    "ispangram2(\"Pack my box with five dozen liquor jugs.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ABCDEFGHIJKLMNOPQRSTUVWXYZ'"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string.ascii_uppercase"
    ]
   },
   {
@@ -378,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
