--- a/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
+++ b/04-Milestone Project - 1/02-Milestone Project 1 - Walkthrough Steps Workbook.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,13 @@
     "\n",
     "def display_board(board):\n",
     "    \n",
-    "    pass"
+    "    print(f' {board[7]} | {board[8]} | {board[9]} ')\n",
+    "    print('___|___|___')\n",
+    "    print(f' {board[4]} | {board[5]} | {board[6]} ')\n",
+    "    print('___|___|___')  \n",
+    "    \n",
+    "    print(f' {board[1]} | {board[2]} | {board[3]} ')\n",
+    "    print('   |   |   ')"
    ]
   },
   {
@@ -63,9 +69,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " X | O | X \n",
+      "___|___|___\n",
+      " O | X | O \n",
+      "___|___|___\n",
+      " X | O | X \n",
+      "   |   |   \n"
+     ]
+    }
+   ],
    "source": [
     "test_board = ['#','X','O','X','O','X','O','X','O','X']\n",
     "display_board(test_board)"
@@ -114,13 +133,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def place_marker(board, marker, position):\n",
-    "    \n",
-    "    pass"
+    "    board[position] = marker\n",
+    "    "
    ]
   },
   {
@@ -132,9 +151,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " X | $ | X \n",
+      "___|___|___\n",
+      " O | X | O \n",
+      "___|___|___\n",
+      " X | O | X \n",
+      "   |   |   \n"
+     ]
+    }
+   ],
    "source": [
     "place_marker(test_board,'$',8)\n",
     "display_board(test_board)"
@@ -324,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
