--- a/04-Milestone Project - 1/03-Milestone Project 1 - Complete Walkthrough Solution.ipynb
+++ b/04-Milestone Project - 1/03-Milestone Project 1 - Complete Walkthrough Solution.ipynb
@@ -18,10 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
@@ -51,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,10 +84,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def player_input():\n",
@@ -113,25 +109,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Player 1: Do you want to be X or O? X\n"
+      "Player 1: Do you want to be X or O? \n",
+      "Player 1: Do you want to be X or O? \n",
+      "Player 1: Do you want to be X or O? \n",
+      "Player 1: Do you want to be X or O? \n",
+      "Player 1: Do you want to be X or O? \n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "('X', 'O')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -147,10 +137,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def place_marker(board, marker, position):\n",
@@ -166,27 +154,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   |   |\n",
-      " X | $ | X\n",
-      "   |   |\n",
-      "-----------\n",
-      "   |   |\n",
-      " O | X | O\n",
-      "   |   |\n",
-      "-----------\n",
-      "   |   |\n",
-      " X | O | X\n",
-      "   |   |\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "place_marker(test_board,'$',8)\n",
     "display_board(test_board)"
@@ -201,10 +171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def win_check(board,mark):\n",
@@ -255,10 +223,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
@@ -279,10 +245,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def space_check(board, position):\n",
@@ -299,10 +263,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def full_board_check(board):\n",
@@ -321,10 +283,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def player_choice(board):\n",
@@ -345,10 +305,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def replay():\n",
@@ -367,29 +325,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "   |   |\n",
-      "   | O | O\n",
-      "   |   |\n",
-      "-----------\n",
-      "   |   |\n",
-      "   |   |  \n",
-      "   |   |\n",
-      "-----------\n",
-      "   |   |\n",
-      " X | X | X\n",
-      "   |   |\n",
-      "Congratulations! You have won the game!\n",
-      "Do you want to play again? Enter Yes or No: No\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Welcome to Tic Tac Toe!')\n",
     "\n",
@@ -477,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
