--- a/04-Milestone Project - 1/04-OPTIONAL -Milestone Project 1 - Advanced Solution.ipynb
+++ b/04-Milestone Project - 1/04-OPTIONAL -Milestone Project 1 - Advanced Solution.ipynb
@@ -11,10 +11,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Specifically for the iPython Notebook environment for clearing output\n",
@@ -29,10 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -64,10 +60,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -93,10 +87,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def place_marker(avail,board,marker,position):\n",
@@ -106,10 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def win_check(board,mark):\n",
@@ -126,10 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def random_player():\n",
@@ -144,10 +132,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def player_choice(board,player):\n",
@@ -164,10 +150,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def replay():\n",
@@ -177,17 +161,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Welcome to Tic Tac Toe!\n",
-      "For this round, Player X will go first!\n"
+      "Available   TIC-TAC-TOE\n",
+      "  moves\n",
+      "\n",
+      "  7|8|          | |X\n",
+      "  -----        -----\n",
+      "  4| |          |X|O\n",
+      "  -----        -----\n",
+      "   | |         O|X|O\n",
+      "\n",
+      "Player X, choose your next position: (1-9) 8\n",
+      "Available   TIC-TAC-TOE\n",
+      "  moves\n",
+      "\n",
+      "  7| |          |X|X\n",
+      "  -----        -----\n",
+      "  4| |          |X|O\n",
+      "  -----        -----\n",
+      "   | |         O|X|O\n",
+      "\n",
+      "Congratulations! Player X wins!\n",
+      "Do you want to play again? Enter Yes or No: no\n"
      ]
     }
    ],
@@ -242,7 +243,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +257,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
