--- a/05-Object Oriented Programming/04-OOP Challenge.ipynb
+++ b/05-Object Oriented Programming/04-OOP Challenge.ipynb
@@ -23,17 +23,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Account:\n",
-    "    pass"
+    "    def __init__(self, owner, balance):\n",
+    "        self.owner = owner\n",
+    "        self.balance = balance\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return f'Account owner: {self.owner}\\nAccount balance: ${self.balance}'\n",
+    "    \n",
+    "    def deposit(self, money):\n",
+    "        try:\n",
+    "            self.balance += money\n",
+    "            print(f'Deposit accepted. Your balance is: {self.balance}')\n",
+    "        except TypeError:\n",
+    "            print('Invalid input')\n",
+    "            \n",
+    "    def withdraw(self, money):\n",
+    "        try:\n",
+    "            if money > self.balance:\n",
+    "                print('Funds unavailable!')\n",
+    "            else:\n",
+    "                self.balance -= money\n",
+    "                print(f'Withdrawal accepted. Your balance is: {self.balance}')\n",
+    "        except TypeError:\n",
+    "            print('Invalid input')\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,14 +66,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Account owner:   Jose\n",
+      "Account owner: Jose\n",
       "Account balance: $100\n"
      ]
     }
@@ -62,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +94,7 @@
        "'Jose'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +115,7 @@
        "100"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,14 +127,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Deposit Accepted\n"
+      "Deposit accepted. Your balance is: 150\n"
      ]
     }
    ],
@@ -122,14 +145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Withdrawal Accepted\n"
+      "Withdrawal accepted. Your balance is: 75\n"
      ]
     }
    ],
@@ -139,20 +162,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Funds Unavailable!\n"
+      "Funds unavailable!\n"
      ]
     }
    ],
    "source": [
     "# 6. Make a withdrawal that exceeds the available balance\n",
     "acct1.withdraw(500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deposit accepted. Your balance is: 125\n"
+     ]
+    }
+   ],
+   "source": [
+    "acct1.deposit(25)"
    ]
   },
   {
@@ -179,7 +219,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
