--- a/09-Built-in Functions/01-Map.ipynb
+++ b/09-Built-in Functions/01-Map.ipynb
@@ -157,6 +157,35 @@
     "\n",
     "Great job! You should now have a basic understanding of the map() function."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello this is 6\n",
+      "Hello this is 10\n",
+      "Hello this is 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,3,5]\n",
+    "b = [5,7,10]\n",
+    "for num in map(lambda a,b: a + b, a, b):\n",
+    "    print('Hello this is {}'.format(num))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -175,7 +204,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
