--- a/09-Built-in Functions/08-Built-in Functions Assessment Test.ipynb
+++ b/09-Built-in Functions/08-Built-in Functions Assessment Test.ipynb
@@ -28,13 +28,13 @@
    "outputs": [],
    "source": [
     "def word_lengths(phrase):\n",
-    "    \n",
-    "    pass"
+    "    return list(map(lambda x: len(x), phrase.split()))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -43,13 +43,13 @@
        "[3, 4, 3, 3, 5, 2, 4, 6]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "word_lengths('How long are the words in this phrase')"
+    "word_lengths(\"How long are the words in this phrase\")"
    ]
   },
   {
@@ -64,35 +64,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "from functools import reduce\n",
     "\n",
     "def digits_to_num(digits):\n",
-    "    \n",
-    "    pass"
+    "    return reduce(lambda x,y: x*10 + y, digits)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "34321"
+       "343"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "digits_to_num([3,4,3,2,1])"
+    "digits_to_num([3,4,3])"
    ]
   },
   {
@@ -106,18 +106,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def filter_words(word_list, letter):\n",
-    "    \n",
-    "    pass"
+    "    return list(filter(lambda x: x[0].lower() == letter, word_list))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
        "['hello', 'ham', 'hi', 'heart']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,33 +148,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def concatenate(L1, L2, connector):\n",
-    "    \n",
-    "    pass"
+    "    return [x + connector + y for (x, y) in zip(L1,L2)]\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['A-a', 'B-b']"
+       "['A-a', 'B-b', 'lm-ao']"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "concatenate(['A','B'],['a','b'],'-')"
+    "concatenate(['A','B','lm'],['a','b','ao'],'-')"
    ]
   },
   {
@@ -188,18 +188,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "def d_list(L):\n",
-    "    \n",
-    "    pass"
+    "    return {key:value for (value,key) in enumerate(L)}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +207,7 @@
        "{'a': 0, 'b': 1, 'c': 2}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,18 +227,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_match_index(L):\n",
-    "    \n",
-    "    pass"
+    "    return len([y for (x, y) in enumerate(L) if x == y])\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +247,7 @@
        "4"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +280,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
