--- a/10-Python Decorators/01-Decorators.ipynb
+++ b/10-Python Decorators/01-Decorators.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'__name__': '__main__', '__doc__': 'Automatically created module for IPython interactive environment', '__package__': None, '__loader__': None, '__spec__': None, '__builtin__': <module 'builtins' (built-in)>, '__builtins__': <module 'builtins' (built-in)>, '_ih': ['', 'print(globals())', 'print(globals().keys())', \"globals()['s']\", \"s = 'Global Variable'\\n\\ndef check_for_locals():\\n    print(locals())\", 'print(globals())'], '_oh': {}, '_dh': ['D:\\\\QuocHai\\\\Desktop\\\\Hoai\\\\Complete-Python-3-Bootcamp-master\\\\10-Python Decorators'], 'In': ['', 'print(globals())', 'print(globals().keys())', \"globals()['s']\", \"s = 'Global Variable'\\n\\ndef check_for_locals():\\n    print(locals())\", 'print(globals())'], 'Out': {}, 'get_ipython': <bound method InteractiveShell.get_ipython of <ipykernel.zmqshell.ZMQInteractiveShell object at 0x000001F65F1AAA00>>, 'exit': <IPython.core.autocall.ZMQExitAutocall object at 0x000001F65F25E5B0>, 'quit': <IPython.core.autocall.ZMQExitAutocall object at 0x000001F65F25E5B0>, '_': '', '__': '', '___': '', '_i': \"s = 'Global Variable'\\n\\ndef check_for_locals():\\n    print(locals())\", '_ii': \"globals()['s']\", '_iii': 'print(globals().keys())', '_i1': 'print(globals())', '_i2': 'print(globals().keys())', '_i3': \"globals()['s']\", '_i4': \"s = 'Global Variable'\\n\\ndef check_for_locals():\\n    print(locals())\", 's': 'Global Variable', 'check_for_locals': <function check_for_locals at 0x000001F65F3659D0>, '_i5': 'print(globals())'}\n"
+     ]
+    }
+   ],
    "source": [
     "print(globals())"
    ]
@@ -91,9 +99,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['__name__', '__doc__', '__package__', '__loader__', '__spec__', '__builtin__', '__builtins__', '_ih', '_oh', '_dh', 'In', 'Out', 'get_ipython', 'exit', 'quit', '_', '__', '___', '_i', '_ii', '_iii', '_i1', '_i2', '_i3', '_i4', 's', 'check_for_locals', '_i5', '_i6'])\n"
+     ]
+    }
+   ],
    "source": [
     "print(globals().keys())"
    ]
@@ -107,9 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Global Variable'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "globals()['s']"
    ]
@@ -640,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
