--- a/11-Python Generators/02-Iterators and Generators Homework.ipynb
+++ b/11-Python Generators/02-Iterators and Generators Homework.ipynb
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def gensquares(N):\n",
-    "\n",
-    "    pass"
+    "    for x in range(N):\n",
+    "        yield x ** 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -82,36 +82,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import random\n",
     "def rand_num(low,high,n):\n",
-    "\n",
-    "    pass"
+    "    for x in range(n):\n",
+    "        yield random.randint(low, high)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "1\n",
-      "10\n",
-      "5\n",
-      "8\n",
-      "2\n",
-      "8\n",
-      "5\n",
+      "7\n",
+      "3\n",
       "4\n",
+      "6\n",
+      "8\n",
       "5\n",
-      "1\n",
-      "4\n"
+      "5\n",
+      "5\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "1\n"
      ]
     }
    ],
@@ -131,13 +133,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'h'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "s = 'hello'\n",
     "\n",
-    "#code here"
+    "s = iter(s)\n",
+    "next(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'e'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "next(s)"
    ]
   },
   {
@@ -159,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -176,6 +210,11 @@
     "\n",
     "gencomp = (item for item in my_list if item > 3)\n",
     "\n",
+    "def a_gen(lst):\n",
+    "    for item in lst:\n",
+    "        if item > 3:\n",
+    "            yield item\n",
+    "            \n",
     "for item in gencomp:\n",
     "    print(item)"
    ]
@@ -206,7 +245,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
