--- a/12-Final Capstone Python Project/01-Final Capstone Project.ipynb
+++ b/12-Final Capstone Python Project/01-Final Capstone Project.ipynb
@@ -10,6 +10,48 @@
     "\n",
     "Please refer to the [**Final Capstone Projects**](http://nbviewer.jupyter.org/github/jmportilla/Complete-Python-Bootcamp/tree/master/Final%20Capstone%20Projects/) folder to get all the info on final capstone project ideas and possible solutions!"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fibonacci sequence\n",
+    "def fibo_gen(n):\n",
+    "    a = 1\n",
+    "    b = 1\n",
+    "    for x in range(n):\n",
+    "        yield a\n",
+    "        a, b = b, a+b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 5]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(fibo_gen(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -28,7 +70,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
