--- a/13-Advanced Python Modules/02-Datetime.ipynb
+++ b/13-Advanced Python Modules/02-Datetime.ipynb
@@ -71,7 +71,7 @@
    "source": [
     "print('Earliest  :', datetime.time.min)\n",
     "print('Latest    :', datetime.time.max)\n",
-    "print('Resolution:', datetime.time.resolution)"
+    "print 'Resolution:', datetime.time.resolution"
    ]
   },
   {
@@ -93,20 +93,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2018-02-05\n",
-      "ctime: Mon Feb  5 00:00:00 2018\n",
-      "tuple: time.struct_time(tm_year=2018, tm_mon=2, tm_mday=5, tm_hour=0, tm_min=0, tm_sec=0, tm_wday=0, tm_yday=36, tm_isdst=-1)\n",
-      "ordinal: 736730\n",
-      "Year : 2018\n",
-      "Month: 2\n",
-      "Day  : 5\n"
+      "2020-05-23\n",
+      "ctime: Sat May 23 00:00:00 2020\n",
+      "tuple: time.struct_time(tm_year=2020, tm_mon=5, tm_mday=23, tm_hour=0, tm_min=0, tm_sec=0, tm_wday=5, tm_yday=144, tm_isdst=-1)\n",
+      "ordinal: 737568\n",
+      "Year : 2020\n",
+      "Month: 5\n",
+      "Day  : 23\n"
      ]
     }
    ],
@@ -158,20 +158,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d1: 2015-03-11\n",
-      "d2: 1990-03-11\n"
+      "d1: 2020-05-15\n",
+      "d2: 1990-05-15\n"
      ]
     }
    ],
    "source": [
-    "d1 = datetime.date(2015, 3, 11)\n",
+    "d1 = datetime.date(2020, 5, 15)\n",
     "print('d1:', d1)\n",
     "\n",
     "d2 = d1.replace(year=1990)\n",
@@ -188,16 +188,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.date(2015, 3, 11)"
+       "datetime.date(2020, 5, 15)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,16 +208,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.date(1990, 3, 11)"
+       "datetime.date(1990, 5, 15)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,22 +228,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.timedelta(9131)"
+       "datetime.timedelta(days=10958)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "d1-d2"
+    "delta = d1 - d2\n",
+    "delta"
    ]
   },
   {
@@ -272,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
