--- a/16-Bonus Material - Introduction to GUIs/04-Widget Events.ipynb
+++ b/16-Bonus Material - Introduction to GUIs/04-Widget Events.ipynb
@@ -29,9 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Register a callback to execute when the button is clicked.\n",
+      "\n",
+      "        The callback will be called with one argument, the clicked button\n",
+      "        widget instance.\n",
+      "\n",
+      "        Parameters\n",
+      "        ----------\n",
+      "        remove: bool (optional)\n",
+      "            Set to true to remove the callback from the list of callbacks.\n",
+      "        \n"
+     ]
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "\n",
@@ -58,9 +75,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "09a4b0fc0910487481885eb4d90e65ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Button(description='Click Me!', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import display\n",
     "button = widgets.Button(description=\"Click Me!\")\n",
@@ -119,9 +151,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setup a handler to be called when a trait changes.\n",
+      "\n",
+      "        This is used to setup dynamic notifications of trait changes.\n",
+      "\n",
+      "        Parameters\n",
+      "        ----------\n",
+      "        handler : callable\n",
+      "            A callable that is called when a trait changes. Its\n",
+      "            signature should be ``handler(change)``, where ``change`` is a\n",
+      "            dictionary. The change dictionary at least holds a 'type' key.\n",
+      "            * ``type``: the type of notification.\n",
+      "            Other keys may be passed depending on the value of 'type'. In the\n",
+      "            case where type is 'change', we also have the following keys:\n",
+      "            * ``owner`` : the HasTraits instance\n",
+      "            * ``old`` : the old value of the modified trait attribute\n",
+      "            * ``new`` : the new value of the modified trait attribute\n",
+      "            * ``name`` : the name of the modified trait attribute.\n",
+      "        names : list, str, All\n",
+      "            If names is All, the handler will apply to all traits.  If a list\n",
+      "            of str, handler will apply to all names in the list.  If a\n",
+      "            str, the handler will apply just to that name.\n",
+      "        type : str, All (default: 'change')\n",
+      "            The type of notification to filter by. If equal to All, then all\n",
+      "            notifications are passed to the observe handler.\n",
+      "        \n"
+     ]
+    }
+   ],
    "source": [
     "print(widgets.Widget.observe.__doc__)"
    ]
@@ -142,9 +206,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "26dd3f5261f7414685fc88456f00c6f1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "int_range = widgets.IntSlider()\n",
     "display(int_range)\n",
@@ -174,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,9 +262,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f368ff00dc4347c3b805f5330d01d9fb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value='The values of slider1 and slider2 are synchronized')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "18f870eaf1644fdea9063bc1ac94a459",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0, description='Slider 1')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "849b038f281049a8a1fd8cd5c2647e81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0, description='Slider 2')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Create Caption\n",
     "caption = widgets.Label(value = 'The values of slider1 and slider2 are synchronized')\n",
@@ -203,9 +325,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "31ac97d66c1c44e2b6b30f646d766734",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Label(value='Changes in source values are reflected in target1')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "64cc791b31f24b8bbf462ef84de58474",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0, description='Source')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "00dacef033304313a94ef1a12ec92b00",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0, description='Target 1')"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Create Caption\n",
     "caption = widgets.Label(value='Changes in source values are reflected in target1')\n",
@@ -228,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +576,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
